xinfra/kubernetes/getmem-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getmem-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getmem
  template:
    metadata:
      labels:
        app: getmem
    spec:
      containers:
        - name: getmem-ctr
          image: meliushp/getmem
---
apiVersion: v1
kind: Service
metadata:
  name:  getmem-srv
spec:
  selector:
    app: getmem
  ports:
    - name: getmem
      protocol: TCP
      port:  3001
      targetPort:  3001
