xinfra/kubernetes/nodecheck-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodecheck-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodecheck
  template:
    metadata:
      labels:
        app: nodecheck
    spec:
      containers:
        - name: nodecheck-ctr
          image: meliushp/nodecheck
---
apiVersion: v1
kind: Service
metadata:
  name:  nodecheck-srv
spec:
  selector:
    app: nodecheck
  ports:
    - name: nodecheck
      protocol: TCP
      port:  3002
      targetPort:  3002
